Deploy: Force cache refresh - Enhanced preview system v2.0

--- a/resume-maker.html
+++ b/resume-maker.html
@@ -2774,6 +2774,7 @@
             });
 
             // Add auto-update listeners for ALL form elements - ENHANCED FOR REAL-TIME PREVIEW
+            // Version: 2.0 - Triple-layer event system for instant preview updates
             // Input and textarea - use 'input' event for real-time updates
             document.querySelectorAll('input, textarea').forEach(element => {
                 element.addEventListener('input', updatePreview);
