Add: Free Voice Assistant with speech recognition - Mobile friendly

--- a/dashboard.html
+++ b/dashboard.html
@@ -609,6 +609,8 @@
     </style>
 <link href="css/header.css" rel="stylesheet"/>
 <link href="css/theme-modern.css" rel="stylesheet"/>
+<link href="css/voice-assistant.css" rel="stylesheet"/>
+<script src="js/voice-assistant.js" defer></script>
 </head>
 <body>
 <header>
