--- a/index.html
+++ b/index.html
@@ -1709,6 +1709,8 @@
 
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/theme-modern.css">
+    <link rel="stylesheet" href="css/voice-assistant.css">
+    <script src="js/voice-assistant.js" defer></script>
 </head>
 <body>
     <!-- Header -->
