Update index.html header: Move Excel tools to Design Tools, rename Other Tools to More, add new links

--- a/index.html
+++ b/index.html
@@ -1779,6 +1779,7 @@
                             <a href="protect-excel.html">Protect Excel Sheet</a>
                         </div>
                     </div>
+                    <a href="pricing.html" style="color: var(--dark); font-weight: 600; text-decoration: none; transition: color 0.3s;">Pricing</a>
                 </div>
                 <div class="auth-buttons">
                     <a href="login.html" class="auth-link">Sign In</a>
@@ -4980,8 +4981,11 @@
                 <span>Company</span>
                 <a href="index.html#about">About Us</a>
                 <a href="index.html#contact">Contact</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="terms-of-service.html">Terms of Service</a>
+                <a href="dmca-en.html">DMCA</a>
+                <a href="blog.html">Blog</a>
             </div>
             <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone.</p>
             <p class="footer-credits">
