Update pricing.html header to match index.html structure

--- a/pricing.html
+++ b/pricing.html
@@ -76,16 +76,19 @@
               <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
               <a href="ai-image-generator.html">AI Image Generator</a>
               <a href="marriage-card.html">Marriage Card</a>
-            </div>
-          </div>
-          <div class="dropdown">
-            <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
-            <div class="dropdown-content">
-              <a href="excel-unlocker.html">Excel Unlocker</a>
+              <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
               <a href="protect-excel.html">Protect Excel Sheet</a>
             </div>
           </div>
-          <a href="pricing.html" style="color: var(--dark); font-weight: 600; text-decoration: none; transition: color 0.3s;">Pricing</a>
+          <div class="dropdown">
+            <a href="#">More <i class="fas fa-chevron-down"></i></a>
+            <div class="dropdown-content">
+              <a href="pricing.html">Pricing</a>
+              <a href="blog.html">Blog/Articles</a>
+              <a href="https://apnaonlineservic.com" target="_blank">Shop-ApnaOnline</a>
+              <a href="https://aimathmaster.com" target="_blank">AI-Math Master</a>
+            </div>
+          </div>
         </div>
         <div class="auth-buttons">
           <a href="login.html" class="auth-link">Sign In</a>
