Fix navigation and sync headers

--- a/image-repair.html
+++ b/image-repair.html
@@ -1261,13 +1261,17 @@
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
                             <a href="ai-image-generator.html">AI Image Generator</a>
                             <a href="marriage-card.html">Marriage Card</a>
+                            <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                            <a href="protect-excel.html">Protect Excel Sheet</a>
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">More <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="excel-unlocker.html">Excel Unlocker</a>
-                            <a href="protect-excel.html">Protect Excel Sheet</a>
+                            <a href="pricing.html">Pricing</a>
+                            <a href="blog.html">Blog/Articles</a>
+                            <a href="https://apnaonlineservic.com" target="_blank">Shop-ApnaOnline</a>
+                            <a href="https://aimathmaster.com" target="_blank">AI-Math Master</a>
                         </div>
                     </div>
                 </div>
