--- a/protect-excel.html
+++ b/protect-excel.html
@@ -407,7 +407,7 @@
                             <a href="merge-pdf.html">Merge PDF</a>
                             <a href="split-pdf.html">Split PDF</a>
                             <a href="compress-pdf.html">Compress PDF</a>
-                            <a href="edit-pdf.html">Edit PDF</a>
+                            <a href="edit-pdf.html">Pdf Editor</a>
                             <a href="protect-pdf.html">Protect PDF</a>
                             <a href="unlock-pdf.html">Unlock PDF</a>
                             <a href="watermark-pdf.html">Watermark PDF</a>
@@ -431,16 +431,20 @@
                         <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
-                            <a href="biodata-maker.html">Marriage Biodata Maker</a>
+                            <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
                             <a href="ai-image-generator.html">AI Image Generator</a>
                             <a href="marriage-card.html">Marriage Card</a>
+                            <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                            <a href="protect-excel.html">Protect Excel Sheet</a>
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">More <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="excel-unlocker.html">Excel Unlocker</a>
-                            <a href="protect-excel.html">Protect Excel Sheet</a>
+                            <a href="pricing.html">Pricing</a>
+                            <a href="blog.html">Blog/Articles</a>
+                            <a href="https://apnaonlineservic.com" target="_blank">Shop-ApnaOnline</a>
+                            <a href="https://aimathmaster.com" target="_blank">AI-Math Master</a>
                         </div>
                     </div>
                 </div>
@@ -453,10 +457,13 @@
                         <span class="user-initial" aria-hidden="true">U</span>
                         <i class="fas fa-chevron-down" aria-hidden="true"></i>
                     </button>
-                    <div id="user-dropdown" class="user-dropdown" hidden>
-                        <a href="dashboard.html" class="user-dropdown-item"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-                        <a href="accounts.html" class="user-dropdown-item"><i class="fas fa-user"></i> My Account</a>
-                        <a href="#" id="logout-btn" class="user-dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+                    <div class="user-dropdown" id="user-dropdown" hidden>
+                        <a href="dashboard.html#dashboard-overview" data-user-nav="dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
+                        <a href="dashboard.html#dashboard-billing" data-user-nav="dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
+                        <a href="dashboard.html#dashboard-payments" data-user-nav="dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
+                        <a href="dashboard.html#dashboard-orders" data-user-nav="dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
+                        <a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
+                        <button type="button" id="logout-button" class="dropdown-logout"><i class="fas fa-sign-out-alt"></i> Sign out</button>
                     </div>
                 </div>
             </nav>
