--- a/image-watermark-convert.html
+++ b/image-watermark-convert.html
@@ -59,188 +59,96 @@
 </head>
 <body>
 <header>
-<div class="container"><style>
-                .tools-grid {
-                    display: grid;
-                    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-                    gap: 20px;
-                    margin: 30px 0;
-                }
-                .tool-card {
-                    background: white;
-                    border-radius: 10px;
-                    overflow: hidden;
-                    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-                    transition: transform 0.3s, box-shadow 0.3s;
-                    text-decoration: none;
-                    color: #333;
-                }
-                .tool-card:hover {
-                    transform: translateY(-5px);
-                    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
-                }
-                .tool-icon {
-                    background: #f0f4ff;
-                    padding: 20px;
-                    text-align: center;
-                    color: #4a6cf7;
-                    font-size: 2rem;
-                }
-                .tool-info {
-                    padding: 15px;
-                }
-                .tool-info h3 {
-                    margin: 0 0 10px 0;
-                    color: #1a1a1a;
-                }
-                .tool-info p {
-                    margin: 0;
-                    color: #666;
-                    font-size: 0.9rem;
-                }
-            </style>
-<div class="tools-grid">
-<a class="tool-card" href="image-repair.html">
-<div class="tool-icon">
-<i class="fas fa-magic"></i>
-</div>
-<div class="tool-info">
-<h3>AI Image Repair</h3>
-<p>Fix blurry, scratched or damaged photos with AI</p>
-</div>
-</a>
-<a class="tool-card" href="image-compressor.html">
-<div class="tool-icon">
-<i class="fas fa-compress-alt"></i>
-</div>
-<div class="tool-info">
-<h3>Image Compressor</h3>
-<p>Reduce image file size without losing quality</p>
-</div>
-</a>
-<a class="tool-card" href="image-resizer.html">
-<div class="tool-icon">
-<i class="fas fa-expand-alt"></i>
-</div>
-<div class="tool-info">
-<h3>Image Resizer</h3>
-<p>Resize images to any dimension</p>
-</div>
-</a>
-<a class="tool-card" href="image-editor.html">
-<div class="tool-icon">
-<i class="fas fa-edit"></i>
-</div>
-<div class="tool-info">
-<h3>Image Editor</h3>
-<p>Edit and enhance your images online</p>
-</div>
-</a>
-<a class="tool-card" href="background-remover.html">
-<div class="tool-icon">
-<i class="fas fa-cut"></i>
-</div>
-<div class="tool-info">
-<h3>Background Remover</h3>
-<p>Remove background from images automatically</p>
-</div>
-</a>
-<a class="tool-card" href="ocr-image.html">
-<div class="tool-icon">
-<i class="fas fa-font"></i>
-</div>
-<div class="tool-info">
-<h3>OCR Image</h3>
-<p>Extract text from images with OCR technology</p>
-</div>
-</a>
-<a class="tool-card" href="image-watermark.html">
-<div class="tool-icon">
-<i class="fas fa-stamp"></i>
-</div>
-<div class="tool-info">
-<h3>Image Watermark</h3>
-<p>Add watermarks to your images</p>
-</div>
-</a>
-</div>
-<nav class="navbar">
-<a class="logo" href="index.html"><img alt="Logo" src="images/logo.png" style="height:54px;"/></a>
-<div class="nav-links">
-<div class="dropdown">
-<a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="jpg-to-pdf.html">JPG to PDF</a>
-<a href="word-to-pdf.html">Word to PDF</a>
-<a href="excel-to-pdf.html">Excel to PDF</a>
-<a href="ppt-to-pdf.html">PowerPoint to PDF</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="pdf-to-jpg.html">PDF to JPG</a>
-<a href="pdf-to-word.html">PDF to Word</a>
-<a href="pdf-to-excel.html">PDF to Excel</a>
-<a href="pdf-to-ppt.html">PDF to PowerPoint</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="merge-pdf.html">Merge PDF</a>
-<a href="split-pdf.html">Split PDF</a>
-<a href="compress-pdf.html">Compress PDF</a>
-<a href="edit-pdf.html">Pdf Editor</a>
-<a href="protect-pdf.html">Protect PDF</a>
-<a href="unlock-pdf.html">Unlock PDF</a>
-<a href="watermark-pdf.html">Watermark PDF</a>
-<a href="crop-pdf.html">Crop PDF</a>
-<a href="add-page-numbers.html">Add Page Numbers</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content"><a href="image-repair.html">AI Image Repair</a><a href="image-compressor.html">Image Compressor</a><a href="image-resizer.html">Image Resizer</a><a href="image-editor.html">Image Editor</a><a href="background-remover.html">Background Remover</a><a href="ocr-image.html">OCR Image</a><a href="image-watermark.html">Image Watermark</a></div>
-</div>
-<div class="dropdown">
-<a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="resume-maker.html">Resume Maker</a>
-<a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
-<a href="ai-image-generator.html">AI Image Generator</a>
-<a href="marriage-card.html">Marriage Card</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="excel-unlocker.html">Excel Unlocker</a>
-<a href="protect-excel.html">Protect Excel Sheet</a>
-</div>
-</div>
-</div>
-<div class="auth-buttons">
-<a class="auth-link" href="login.html">Sign In</a>
-<a class="auth-btn" href="signup.html"><i aria-hidden="true" class="fas fa-user-plus"></i><span>Signup</span></a>
-</div>
-<div class="user-menu" data-open="false" id="user-menu">
-<button aria-expanded="false" aria-haspopup="true" aria-label="Account menu" class="user-menu-toggle" id="user-menu-toggle" type="button">
-<span aria-hidden="true" class="user-initial">U</span>
-<i aria-hidden="true" class="fas fa-chevron-down"></i>
-</button>
-<div class="user-dropdown" hidden="" id="user-dropdown">
-<a data-user-nav="dashboard-overview" href="dashboard.html#dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
-<a data-user-nav="dashboard-billing" href="dashboard.html#dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
-<a data-user-nav="dashboard-payments" href="dashboard.html#dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
-<a data-user-nav="dashboard-orders" href="dashboard.html#dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
-<a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
-<button class="dropdown-logout" id="logout-button" type="button"><i class="fas fa-sign-out-alt"></i> Sign out</button>
-</div>
-</div>
-</nav>
-</div>
-</header>
+        <div class="container">
+            <nav class="navbar">
+                <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
+                <div class="nav-links">
+                    <div class="dropdown">
+                        <a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="jpg-to-pdf.html">JPG to PDF</a>
+                            <a href="word-to-pdf.html">Word to PDF</a>
+                            <a href="excel-to-pdf.html">Excel to PDF</a>
+                            <a href="ppt-to-pdf.html">PowerPoint to PDF</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="pdf-to-jpg.html">PDF to JPG</a>
+                            <a href="pdf-to-word.html">PDF to Word</a>
+                            <a href="pdf-to-excel.html">PDF to Excel</a>
+                            <a href="pdf-to-ppt.html">PDF to PowerPoint</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="merge-pdf.html">Merge PDF</a>
+                            <a href="split-pdf.html">Split PDF</a>
+                            <a href="compress-pdf.html">Compress PDF</a>
+                            <a href="edit-pdf.html">Pdf Editor</a>
+                            <a href="protect-pdf.html">Protect PDF</a>
+                            <a href="unlock-pdf.html">Unlock PDF</a>
+                            <a href="watermark-pdf.html">Watermark PDF</a>
+                            <a href="crop-pdf.html">Crop PDF</a>
+                            <a href="add-page-numbers.html">Add Page Numbers</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="image-repair.html">AI Image Repair</a>
+                            <a href="image-compressor.html">Image Compressor</a>
+                            <a href="image-resizer.html">Image Resizer</a>
+                            <a href="image-editor.html">Image Editor</a>
+                            <a href="background-remover.html">Image Background Remover</a>
+                            <a href="ocr-image.html">OCR Image</a>
+                            <a href="image-watermark.html">Image Watermark Tool</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="resume-maker.html">Resume Maker</a>
+                            <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
+                            <a href="ai-image-generator.html">AI Image Generator</a>
+                            <a href="marriage-card.html">Marriage Card</a>
+                            <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                            <a href="protect-excel.html">Protect Excel Sheet</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">More <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="pricing.html">Pricing</a>
+                            <a href="blog.html">Blog/Articles</a>
+                            <a href="https://apnaonlineservic.com" target="_blank">Shop-ApnaOnline</a>
+                            <a href="https://aimathmaster.com" target="_blank">AI-Math Master</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="auth-buttons">
+                    <a href="login.html" class="auth-link">Sign In</a>
+                    <a href="signup.html" class="auth-btn"><i class="fas fa-user-plus" aria-hidden="true"></i><span>Signup</span></a>
+                </div>
+                <div id="user-menu" class="user-menu" data-open="false">
+                    <button id="user-menu-toggle" class="user-menu-toggle" type="button" aria-haspopup="true" aria-expanded="false" aria-label="Account menu">
+                        <span class="user-initial" aria-hidden="true">U</span>
+                        <i class="fas fa-chevron-down" aria-hidden="true"></i>
+                    </button>
+                    <div class="user-dropdown" id="user-dropdown" hidden>
+                        <a href="dashboard.html#dashboard-overview" data-user-nav="dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
+                        <a href="dashboard.html#dashboard-billing" data-user-nav="dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
+                        <a href="dashboard.html#dashboard-payments" data-user-nav="dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
+                        <a href="dashboard.html#dashboard-orders" data-user-nav="dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
+                        <a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
+                        <button type="button" id="logout-button" class="dropdown-logout"><i class="fas fa-sign-out-alt"></i> Sign out</button>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
 <div class="container">
 <div class="tool-page">
 <div class="title">Image Watermark Result</div>
