--- a/protect-pdf.html
+++ b/protect-pdf.html
@@ -14,92 +14,96 @@
 <link href="css/theme-modern.css" rel="stylesheet"/>
 </head><body>
 <header>
-<div class="container">
-<nav class="navbar">
-<a class="logo" href="index.html"><img alt="Logo" src="images/logo.png" style="height:54px;"/></a>
-<div class="nav-links">
-<div class="dropdown">
-<a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="jpg-to-pdf.html">JPG to PDF</a>
-<a href="word-to-pdf.html">Word to PDF</a>
-<a href="excel-to-pdf.html">Excel to PDF</a>
-<a href="ppt-to-pdf.html">PowerPoint to PDF</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="pdf-to-jpg.html">PDF to JPG</a>
-<a href="pdf-to-word.html">PDF to Word</a>
-<a href="pdf-to-excel.html">PDF to Excel</a>
-<a href="pdf-to-ppt.html">PDF to PowerPoint</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="merge-pdf.html">Merge PDF</a>
-<a href="split-pdf.html">Split PDF</a>
-<a href="compress-pdf.html">Compress PDF</a>
-<a href="edit-pdf.html">Pdf Editor</a>
-<a href="protect-pdf.html">Protect PDF</a>
-<a href="unlock-pdf.html">Unlock PDF</a>
-<a href="watermark-pdf.html">Watermark PDF</a>
-<a href="crop-pdf.html">Crop PDF</a>
-<a href="add-page-numbers.html">Add Page Numbers</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="image-repair.html">AI Image Repair</a>
-<a href="image-compressor.html">Image Compressor</a>
-<a href="image-resizer.html">Image Resizer</a>
-<a href="image-editor.html">Image Editor</a>
-<a href="background-remover.html">Image Background Remover</a>
-<a href="ocr-image.html">OCR Image</a>
-<a href="image-watermark.html">Image Watermark Tool</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="resume-maker.html">Resume Maker</a>
-<a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
-<a href="ai-image-generator.html">AI Image Generator</a>
-<a href="marriage-card.html">Marriage Card</a>
-</div>
-</div>
-<div class="dropdown">
-<a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content">
-<a href="excel-unlocker.html">Excel Unlocker</a>
-<a href="protect-excel.html">Protect Excel Sheet</a>
-</div>
-</div>
-</div>
-<div class="auth-buttons">
-<a class="auth-link" href="login.html">Sign In</a>
-<a class="auth-btn" href="signup.html"><i aria-hidden="true" class="fas fa-user-plus"></i><span>Signup</span></a>
-</div>
-<div class="user-menu" data-open="false" id="user-menu">
-<button aria-expanded="false" aria-haspopup="true" aria-label="Account menu" class="user-menu-toggle" id="user-menu-toggle" type="button">
-<span aria-hidden="true" class="user-initial">U</span>
-<i aria-hidden="true" class="fas fa-chevron-down"></i>
-</button>
-<div class="user-dropdown" hidden="" id="user-dropdown">
-<a data-user-nav="dashboard-overview" href="dashboard.html#dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
-<a data-user-nav="dashboard-billing" href="dashboard.html#dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
-<a data-user-nav="dashboard-payments" href="dashboard.html#dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
-<a data-user-nav="dashboard-orders" href="dashboard.html#dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
-<a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
-<button class="dropdown-logout" id="logout-button" type="button"><i class="fas fa-sign-out-alt"></i> Sign out</button>
-</div>
-</div>
-</nav>
-</div>
-</header>
+        <div class="container">
+            <nav class="navbar">
+                <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
+                <div class="nav-links">
+                    <div class="dropdown">
+                        <a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="jpg-to-pdf.html">JPG to PDF</a>
+                            <a href="word-to-pdf.html">Word to PDF</a>
+                            <a href="excel-to-pdf.html">Excel to PDF</a>
+                            <a href="ppt-to-pdf.html">PowerPoint to PDF</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="pdf-to-jpg.html">PDF to JPG</a>
+                            <a href="pdf-to-word.html">PDF to Word</a>
+                            <a href="pdf-to-excel.html">PDF to Excel</a>
+                            <a href="pdf-to-ppt.html">PDF to PowerPoint</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="merge-pdf.html">Merge PDF</a>
+                            <a href="split-pdf.html">Split PDF</a>
+                            <a href="compress-pdf.html">Compress PDF</a>
+                            <a href="edit-pdf.html">Pdf Editor</a>
+                            <a href="protect-pdf.html">Protect PDF</a>
+                            <a href="unlock-pdf.html">Unlock PDF</a>
+                            <a href="watermark-pdf.html">Watermark PDF</a>
+                            <a href="crop-pdf.html">Crop PDF</a>
+                            <a href="add-page-numbers.html">Add Page Numbers</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="image-repair.html">AI Image Repair</a>
+                            <a href="image-compressor.html">Image Compressor</a>
+                            <a href="image-resizer.html">Image Resizer</a>
+                            <a href="image-editor.html">Image Editor</a>
+                            <a href="background-remover.html">Image Background Remover</a>
+                            <a href="ocr-image.html">OCR Image</a>
+                            <a href="image-watermark.html">Image Watermark Tool</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="resume-maker.html">Resume Maker</a>
+                            <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
+                            <a href="ai-image-generator.html">AI Image Generator</a>
+                            <a href="marriage-card.html">Marriage Card</a>
+                            <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                            <a href="protect-excel.html">Protect Excel Sheet</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#">More <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="pricing.html">Pricing</a>
+                            <a href="blog.html">Blog/Articles</a>
+                            <a href="https://apnaonlineservic.com" target="_blank">Shop-ApnaOnline</a>
+                            <a href="https://aimathmaster.com" target="_blank">AI-Math Master</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="auth-buttons">
+                    <a href="login.html" class="auth-link">Sign In</a>
+                    <a href="signup.html" class="auth-btn"><i class="fas fa-user-plus" aria-hidden="true"></i><span>Signup</span></a>
+                </div>
+                <div id="user-menu" class="user-menu" data-open="false">
+                    <button id="user-menu-toggle" class="user-menu-toggle" type="button" aria-haspopup="true" aria-expanded="false" aria-label="Account menu">
+                        <span class="user-initial" aria-hidden="true">U</span>
+                        <i class="fas fa-chevron-down" aria-hidden="true"></i>
+                    </button>
+                    <div class="user-dropdown" id="user-dropdown" hidden>
+                        <a href="dashboard.html#dashboard-overview" data-user-nav="dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
+                        <a href="dashboard.html#dashboard-billing" data-user-nav="dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
+                        <a href="dashboard.html#dashboard-payments" data-user-nav="dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
+                        <a href="dashboard.html#dashboard-orders" data-user-nav="dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
+                        <a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
+                        <button type="button" id="logout-button" class="dropdown-logout"><i class="fas fa-sign-out-alt"></i> Sign out</button>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
 <section class="hero"><div class="container"><h1>Protect PDF</h1><p>Add password protection to your PDF files.</p></div></section><main class="container"><div class="tool-page"><h2>Upload PDF</h2><div class="upload-area" onclick="document.getElementById('protect-input').click()"><i class="fas fa-cloud-upload-alt" style="font-size:38px;color:var(--primary)"></i><h3>Drag &amp; drop or click to browse</h3><input accept=".pdf" id="protect-input" style="display:none" type="file"/></div><div class="form" style="margin:10px 0 16px"><label for="pdf-user-password" style="display:block;margin-bottom:6px;font-weight:600">User Password</label><input class="form-control" id="pdf-user-password" placeholder="Enter user password (to open)" style="width:100%;padding:12px;border:1px solid #ddd;border-radius:8px" type="password"/></div><div class="form" style="margin:10px 0 16px"><label for="pdf-owner-password" style="display:block;margin-bottom:6px;font-weight:600">Owner Password (optional)</label><input class="form-control" id="pdf-owner-password" placeholder="Enter owner password (permissions)" style="width:100%;padding:12px;border:1px solid #ddd;border-radius:8px" type="password"/><p style="margin-top:6px;color:var(--gray);font-size:0.9rem;">If left empty, owner password will match the user password.</p></div><div><button class="btn">Protect PDF</button><a class="btn secondary" href="index.html">Back to Home</a></div></div></main>
 <footer>
 <div class="container footer-inner">
