Update: Changed 'Design Tools' to 'Other Tools' in all pages header - Updated 81 HTML files - Updated global-components.js - Updated Python and PowerShell scripts

--- a/Indian-style-Resume-generator.html
+++ b/Indian-style-Resume-generator.html
@@ -1,9 +1,9 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="hi">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Indian Resume Maker â€” Final (Dark/Light + 10 Templates)</title>
+<title>Indian Resume Maker — Final (Dark/Light + 10 Templates)</title>
     <link rel="stylesheet" href="css/footer.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -143,7 +143,7 @@ th{font-weight:700;background:linear-gradient(90deg,#fff7e6,#fff3d6)}
 </head>
 <body>
   <div class="topbar">
-    <div class="brand">Indian Resume Maker â€” Final</div>
+    <div class="brand">Indian Resume Maker — Final</div>
     <div style="margin-left:12px"><button id="themeToggle" class="ghost">Toggle Dark</button></div>
     <div class="controls header-links">
       <div class="brand-actions">
@@ -211,7 +211,7 @@ th{font-weight:700;background:linear-gradient(90deg,#fff7e6,#fff3d6)}
           <option>Accountant</option>
           <option>Computer Operator</option>
           <option>Manager</option>
-          <option value="Write">âœï¸ Write My Own</option>
+          <option value="Write">✍️ Write My Own</option>
         </select>
         <div id="profileCustomWrap" style="display:none;margin-top:8px"><input id="profileCustom" placeholder="Write your profile"></div>
 
@@ -230,7 +230,7 @@ th{font-weight:700;background:linear-gradient(90deg,#fff7e6,#fff3d6)}
           <option>Dedicated educator passionate about designing inclusive lesson plans, integrating technology in classrooms, and nurturing a collaborative learning culture.</option>
           <option>Finance enthusiast ready to support budgeting, forecasting, and audit preparation tasks while developing into a trusted advisor for senior leadership.</option>
           <option>Healthcare professional committed to compassionate patient care, accurate record management, and coordination with multidisciplinary teams to improve outcomes.</option>
-          <option value="Write">âœï¸ Write My Own</option>
+          <option value="Write">✍️ Write My Own</option>
         </select>
         <div id="objectiveCustomWrap" style="display:none;margin-top:8px"><textarea id="objectiveCustom" placeholder="Write your objective"></textarea></div>
 
@@ -318,7 +318,7 @@ th{font-weight:700;background:linear-gradient(90deg,#fff7e6,#fff3d6)}
             <div class="small">Template: <span id="previewTpl">1</span></div>
           </div>
           <div>
-            <button id="backToForm" class="ghost mobile-only">â† Back to Form</button>
+            <button id="backToForm" class="ghost mobile-only">← Back to Form</button>
           </div>
         </div>
         <div class="preview-inner" id="previewInner">
@@ -332,7 +332,7 @@ th{font-weight:700;background:linear-gradient(90deg,#fff7e6,#fff3d6)}
     <div class="preview-overlay-inner">
       <div class="preview-overlay-header">
         <h3 id="previewOverlayTitle">Resume Preview</h3>
-        <button class="overlay-close" id="closePreview" aria-label="Close preview">Ã—</button>
+        <button class="overlay-close" id="closePreview" aria-label="Close preview">×</button>
       </div>
       <div class="preview-overlay-body">
         <div id="overlayPreview"></div>
@@ -356,7 +356,7 @@ for(let i=1;i<=tplCount;i++){
   const names = ['Corporate','Student','Fresher','Supervisor','Labour','Truck','Car','Engineer','Doctor','Manager'];
   const opt = document.createElement('option');
   opt.value = i;
-  opt.textContent = `${i} â€” ${names[i-1]}`;
+  opt.textContent = `${i} — ${names[i-1]}`;
   templateDropdown.appendChild(opt);
 }
 templateDropdown.value = 1;
@@ -1007,7 +1007,7 @@ document.getElementById('downloadHtmlBtn').addEventListener('click', ()=> {
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Design Tools</h3>
+                    <h3>Other Tools</h3>
                     <ul class="footer-links">
                         <li><a href="resume-maker.html">Resume Maker</a></li>
                         <li><a href="biodata-maker.html">Marrige Biodata-Data Maker</a></li>
