--- a/add-page-numbers.html
+++ b/add-page-numbers.html
@@ -1,4 +1,4 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -97,7 +97,7 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -171,7 +171,7 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 <footer>
 <div class="container footer-inner">
 <div class="footer-company-links"><span>Company</span><a href="index.html#about">About Us</a><a href="index.html#contact">Contact</a><a href="privacy-policy.html">Privacy Policy</a><a href="terms-of-service.html">Terms of Service</a></div>
-<p class="footer-brand-line">Â© easyjpgtopdf â€” Free PDF &amp; Image Tools for everyone.</p>
+<p class="footer-brand-line">© easyjpgtopdf — Free PDF &amp; Image Tools for everyone.</p>
 <p class="footer-credits">Thanks to Font Awesome, Google Fonts, pdf-lib, FileSaver.js, Firebase, and every open-source contributor. <a href="attributions.html">See full acknowledgements</a>.</p>
 </div>
 </footer>
