--- a/pdf-to-excel.html
+++ b/pdf-to-excel.html
@@ -1,4 +1,4 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -516,7 +516,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -579,7 +579,7 @@
 <div class="file-info" id="fileInfo"></div>
 <div class="progress-wrapper" id="progressWrapper">
 <div style="display:flex;justify-content:space-between;font-size:0.9rem;color:var(--muted);">
-<span id="progressLabel">Preparingâ€¦</span>
+<span id="progressLabel">Preparing…</span>
 <span id="progressPercent">0%</span>
 </div>
 <div class="progress-track">
@@ -751,7 +751,7 @@
             reader.onprogress = function (event) {
               if (event.lengthComputable) {
                 const percent = Math.round((event.loaded / total) * 100);
-                setProgress(percent, "Caching fallback copyâ€¦");
+                setProgress(percent, "Caching fallback copy…");
               }
             };
             reader.onload = function () {
@@ -812,8 +812,8 @@
 
         continueBtn.disabled = false;
         clearBtn.disabled = false;
-        setStatus("Caching file securely in your browserâ€¦");
-        setProgress(8, "Saving to secure storageâ€¦");
+        setStatus("Caching file securely in your browser…");
+        setProgress(8, "Saving to secure storage…");
 
         try {
           await storeInIndexedDB(file);
@@ -866,7 +866,7 @@
           return;
         }
         setProgress(null);
-        setStatus("Opening previewâ€¦");
+        setStatus("Opening preview…");
         window.location.href = "pdf-to-excel-convert.html";
       });
 
@@ -889,7 +889,7 @@
 <a href="privacy-policy.html">Privacy Policy</a>
 <a href="terms-of-service.html">Terms of Service</a>
 </div>
-<p class="footer-brand-line">Â© easyjpgtopdf â€” Free PDF &amp; Image Tools for everyone.</p>
+<p class="footer-brand-line">© easyjpgtopdf — Free PDF &amp; Image Tools for everyone.</p>
 <p class="footer-credits">
                 Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
                 <a href="attributions.html">See full acknowledgements</a>.
