--- a/resume-maker.html
+++ b/resume-maker.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1432,7 +1432,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -1841,7 +1841,7 @@
 
     <div class="screen-preview-overlay" id="screenPreviewOverlay" aria-hidden="true">
         <div class="screen-preview-dialog" role="dialog" aria-modal="true" aria-labelledby="screenPreviewTitle">
-            <button class="screen-preview-close" id="screenPreviewClose" aria-label="Close preview">Ã—</button>
+            <button class="screen-preview-close" id="screenPreviewClose" aria-label="Close preview">×</button>
             <h2 id="screenPreviewTitle" style="margin:0; font-size:20px; color:#1b1c2e;">Resume Preview</h2>
             <div class="screen-preview-content" id="screenPreviewContent"></div>
         </div>
@@ -2581,7 +2581,7 @@
                 newWorkExp.id = `workExp${workExpCounter}`;
                 
                 newWorkExp.innerHTML = `
-                    <button class="remove-btn" onclick="removeSection('workExp${workExpCounter}')">Ã—</button>
+                    <button class="remove-btn" onclick="removeSection('workExp${workExpCounter}')">×</button>
                     <div class="form-group">
                         <label for="job${workExpCounter}Title">Job Title</label>
                         <input type="text" id="job${workExpCounter}Title" placeholder="Position Title">
@@ -2621,7 +2621,7 @@
                 newEducation.id = `edu${educationCounter}`;
                 
                 newEducation.innerHTML = `
-                    <button class="remove-btn" onclick="removeSection('edu${educationCounter}')">Ã—</button>
+                    <button class="remove-btn" onclick="removeSection('edu${educationCounter}')">×</button>
                     <div class="form-group">
                         <label for="edu${educationCounter}Degree">Degree</label>
                         <input type="text" id="edu${educationCounter}Degree" placeholder="Degree Name">
