--- a/server/public/add-page-numbers.html
+++ b/server/public/add-page-numbers.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -59,7 +59,7 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 <div class="dropdown-content"><a href="merge-pdf.html">Merge PDF</a><a href="split-pdf.html">Split PDF</a><a href="compress-pdf.html">Compress PDF</a><a href="edit-pdf.html">Pdf Editor</a><a href="protect-pdf.html">Protect PDF</a><a href="unlock-pdf.html">Unlock PDF</a><a href="watermark-pdf.html">Watermark PDF</a><a href="crop-pdf.html">Crop PDF</a><a href="add-page-numbers.html">Add Page Numbers</a></div></div>
 <div class="dropdown"><a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="image-compressor.html">Image Compressor</a><a href="image-resizer.html">Image Resizer</a><a href="image-editor.html">Image Editor</a><a href="background-remover.html">Image Background Remover</a><a href="ocr-image.html">OCR Image</a><a href="image-watermark.html">Image Watermark Tool</a></div></div>
-<div class="dropdown"><a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown"><a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="resume-maker.html">Resume Maker</a><a href="biodata-maker.html">Marrige Biodata-Data Maker</a><a href="ai-image-generator.html">AI Image Generator</a><a href="marriage-card.html">Marriage Card</a></div></div>
 <div class="dropdown"><a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
 <div class="dropdown-content"><a href="excel-unlocker/" target="_blank">Excel Unlocker</a><a href="protect-excel.html">Protect Excel Sheet</a></div></div>
