--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1761,7 +1761,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -2009,7 +2009,7 @@
                     <p>Extract text from images with OCR technology.</p>
                 </div>
 
-                <!-- Design Tools -->
+                <!-- Other Tools -->
                 <div class="tool-card" onclick="location.href='resume-maker.html'">
                     <div class="tool-icon">
                         <i class="fas fa-user-tie"></i>
