--- a/add-page-numbers-convert.html
+++ b/add-page-numbers-convert.html
@@ -1,4 +1,4 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -336,7 +336,7 @@
         // Load and preview original PDF
         const pdfDoc = await PDFDocument.load(originalPdfData);
         const pageCount = pdfDoc.getPageCount();
-        document.getElementById('meta').textContent = `${fileName} â€¢ ${pageCount} page(s)`;
+        document.getElementById('meta').textContent = `${fileName} • ${pageCount} page(s)`;
         
         // Show message in preview panel
         const previewContainer = document.getElementById('previewContainer');
@@ -609,7 +609,7 @@
 <a href="privacy-policy.html">Privacy Policy</a>
 <a href="terms-of-service.html">Terms of Service</a>
 </div>
-<p class="footer-brand-line">Â© easyjpgtopdf â€” Free PDF &amp; Image Tools for everyone.</p>
+<p class="footer-brand-line">© easyjpgtopdf — Free PDF &amp; Image Tools for everyone.</p>
 <p class="footer-credits">
                 Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
                 <a href="attributions.html">See full acknowledgements</a>.
