--- a/image-compressor.html
+++ b/image-compressor.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -203,7 +203,7 @@
                 <h3>Quality</h3>
                 <input type="range" class="slider" id="ic-quality" min="10" max="100" value="85">
                 <div class="slider-value" id="ic-quality-value">85%</div>
-                <div style="color:#64748b;font-size:.85rem;margin-top:4px">Lower = smaller size â€¢ Higher = better quality</div>
+                <div style="color:#64748b;font-size:.85rem;margin-top:4px">Lower = smaller size • Higher = better quality</div>
               </div>
               <div class="settings-group">
                 <h3>Output Format</h3>
