--- a/image-editor.html
+++ b/image-editor.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -193,7 +193,7 @@
 
     <div class="tool-content" id="image-editor">
       <div class="upload-area" id="edit-upload-area">
-        <i>Ã°Å¸â€œÂ</i>
+        <i>ðŸ“</i>
         <h3>Drag & Drop your image here</h3>
         <p>or click to browse files</p>
         <input type="file" class="file-input" id="edit-file-input" accept="image/*">
