Update: Move Blog/Articles to nested dropdown under More menu - Added nested dropdown CSS support in header.css - Blog/Articles now appears under More dropdown - Hover on Blog/Articles shows all blog pages (Blog Home, All Articles, Tutorials, Tips & Tricks, News & Updates, Guides) - Updated all blog pages with new navigation structure

--- a/blog-articles.html
+++ b/blog-articles.html
@@ -154,19 +154,20 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Blog/Articles <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="blog-articles.html">All Articles</a>
-                            <a href="blog-tutorials.html">Tutorials</a>
-                            <a href="blog-tips.html">Tips & Tricks</a>
-                            <a href="blog-news.html">News & Updates</a>
-                            <a href="blog-guides.html">Guides</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
                         <a href="#">More <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="pricing.html">Pricing</a>
+                            <div class="dropdown">
+                                <a href="#">Blog/Articles <i class="fas fa-chevron-down"></i></a>
+                                <div class="dropdown-content">
+                                    <a href="blog.html">Blog Home</a>
+                                    <a href="blog-articles.html">All Articles</a>
+                                    <a href="blog-tutorials.html">Tutorials</a>
+                                    <a href="blog-tips.html">Tips & Tricks</a>
+                                    <a href="blog-news.html">News & Updates</a>
+                                    <a href="blog-guides.html">Guides</a>
+                                </div>
+                            </div>
                             <a href="https://apnaonlineservic.com" target="_blank">Shop-ApnaOnline</a>
                             <a href="https://aimathmaster.com" target="_blank">AI-Math Master</a>
                         </div>
